Fixed project section linked too big

--- a/scss/_generic.scss
+++ b/scss/_generic.scss
@@ -79,6 +79,10 @@ header, footer {
 .hidden {
     display: none;
 }
+
+#moreProjectsBtn {
+    width: 300px;
+}
 .btn-bold {
     margin: auto;
     border-radius: 32px;
